@@ -330,6 +330,77 @@ se_rand(time_t mod)
 }
 
 
+/* Number of days per month (except for February in leap years). */
+static const int mdays[] = {
+    31, 28, 31, 30, 31, 30, 31, 31, 30, 31, 30, 31
+};
+
+
+static int
+is_leap_year(int year)
+{
+    return year % 4 == 0 && (year % 100 != 0 || year % 400 == 0);
+}
+
+
+static int
+leap_days(int y1, int y2)
+{
+    --y1;
+    --y2;
+    return (y2/4 - y1/4) - (y2/100 - y1/100) + (y2/400 - y1/400);
+}
+
+
+/*
+ * Code taken from NSD 3.2.5, which is
+ * code adapted from Python 2.4.1 sources (Lib/calendar.py).
+ */
+static time_t
+mktime_from_utc(const struct tm *tm)
+{
+    int year = 1900 + tm->tm_year;
+    time_t days = 365 * (year - 1970) + leap_days(1970, year);
+    time_t hours;
+    time_t minutes;
+    time_t seconds;
+    int i;
+
+    for (i = 0; i < tm->tm_mon; ++i) {
+        days += mdays[i];
+    }
+    if (tm->tm_mon > 1 && is_leap_year(year)) {
+        ++days;
+    }
+    days += tm->tm_mday - 1;
+
+    hours = days * 24 + tm->tm_hour;
+    minutes = hours * 60 + tm->tm_min;
+    seconds = minutes * 60 + tm->tm_sec;
+
+    return seconds;
+}
+
+
+/**
+ * Convert time in string format into seconds.
+ *
+ */
+time_t
+timeshift2time(const char *time)
+{
+        /* convert a string in format YYMMDDHHMMSS to time_t */
+        struct tm tm;
+        time_t timeshift = 0;
+
+        /* Try to scan the time... */
+        if (strptime(time, "%Y%m%d%H%M%S", &tm)) {
+                timeshift = mktime_from_utc(&tm);
+	}
+        return timeshift;
+}
+
+
 /**
  * Return the time since Epoch, measured in seconds.
  *
@@ -337,6 +408,13 @@ se_rand(time_t mod)
 time_t
 time_now(void)
 {
+#ifdef ENFORCER_TIMESHIFT
+    const char* env = getenv("ENFORCER_TIMESHIFT");
+    if (env) {
+        return timeshift2time(env);
+    } else
+#endif /* ENFORCER_TIMESHIFT */
+
     return time(NULL);
 }
 
